Criação de tag autor no momento de inserir novo Livro

--- a/src/main/webapp/livros/form.xhtml
+++ b/src/main/webapp/livros/form.xhtml
@@ -1,5 +1,6 @@
 <html xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:jsf="http://xmlns.jcp.org/jsf">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns="http://www.w3.org/1999/xhtml">
 <h:body>
 	<h:form>
 		<div>
@@ -18,6 +19,13 @@
 		<div>
 			<h:outputLabel>Preço</h:outputLabel>
 			<h:inputText value="#{adminBooksBean.product.price}" />
+		</div>
+		<div>
+			<h:outputLabel>Autores</h:outputLabel>
+			<h:selectManyListbox value="#{adminBooksBean.selectedAuthorsIds}">
+				<f:selectItems value="#{authorsList.get()}" var="author"
+					itemLabel="#{author.name}" itemValue="#{author.id}" />
+			</h:selectManyListbox>
 		</div>
 		<h:commandButton value="Gravar" action="#{adminBooksBean.save}" />
 	</h:form>
